Fri May 25 15:39:59 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2610_Regression_Test.cpp: Rearrange order of #includes so
          Visual Age C++ 6 can find what it needs.

Fri May 25 12:54:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Active_Map_Manager.h:
        * ace/Priority_Reactor.h:
        * ace/Signal.h:
          Doxygen changes

Thu May 24 13:37:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks6.2.GNU:
        * include/makeinclude/platform_vxworks6.3.GNU:
          The override of RM is only needed for windows

Thu May 24 13:20:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for fast and ipo

Thu May 24 08:16:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks6.5.GNU:
          New file upcoming VxWorks 6.5

Thu May 24 07:54:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Array_Base.h:
        * ace/ATM_Addr.h:
        * ace/Barrier.h:
        * ace/Based_Pointer_Repository.h:
        * ace/Configuration.h:
        * ace/DLL_Manager.h:
        * ace/FILE.h:
        * ace/Free_List.h:
        * ace/INET_Addr.h:
        * ace/IO_SAP.h:
        * ace/Local_Memory_Pool.h:
        * ace/Log_Record.h:
        * ace/Malloc_Base.h:
        * ace/Map_Manager.h:
        * ace/Mem_Map.h:
        * ace/Message_Queue_T.h:
        * ace/MMAP_Memory_Pool.h:
        * ace/Pagefile_Memory_Pool.h:
        * ace/QoS/SOCK_Dgram_Mcast_QoS.h:
        * ace/Reactor_Impl.h:
        * ace/Registry.h:
        * ace/Remote_Tokens.h:
        * ace/RW_Process_Mutex.h:
        * ace/Sbrk_Memory_Pool.h:
        * ace/Service_Gestalt.h:
        * ace/Shared_Memory_Pool.h:
        * ace/Signal.h:
        * ace/SOCK_Dgram.h:
        * ace/SPIPE_Connector.h:
        * ace/SPIPE_Stream.h:
        * ace/Timer_Heap_T.h: