@@ -1,3 +1,15 @@
+Fri May 25 15:44:13 UTC 2007  Steve Huston  <shuston@riverace.com>
+
+        * ace/config-aix-5.x.h:
+        * include/makeinclude/platform_aix_ibm.GNU: Changed the AIX shared
+          library build output from an archived shared object (shr.o in
+          lib<foo>.a) to a dynamic shared library (lib<foo>.so).
+
+        * NEWS: Mention the .a->.so change above.
+
+        * ace/OS_NS_Thread.cpp: Formatting fixes to properly line up
+          bracketed code blocks, making it easier to read.
+
 Fri May 25 15:39:59 UTC 2007  Steve Huston  <shuston@riverace.com>
 
         * tests/Bug_2610_Regression_Test.cpp: Rearrange order of #includes so
